# webgpu_examples_c

./: .gitignore  CMakeLists.txt  README.md  test_build.sh
glm_cameras/: CMakeLists.txt  webgpu-cameras-step-1-direct-math.c  webgpu-cameras-step-2-camera-aim.c  webgpu-cameras-step-3-look-at.c  webgpu-cameras-step-4-aim-Fs.c  webgpu-perspective-projection-step-4-perspective.c
load_geometry_data/: CMakeLists.txt  multiple_instances_multiple_mesh_one_draw.c  multiple_instances_multiple_mesh_one_draw_with_compute.c  multiple_instances_multiple_mesh_one_draw_with_compute_v2.c  multiple_instances_of_mesh.c  multiple_instances_one_draw_with_compute.c  multiple_instances_one_draw_with_compute_workgroup_size_64.c  multiple_instances_one_draw_with_compute_workgroup_size_64_no_excess_vertices.c  multiple_instances_using_instanceCount.c  multiple_instances_using_instanceCount_and_StepModeInstance.c  multiple_instances_using_instanceCount_firstVertex_firstInstance.c  multiple_instances_using_instanceCount_with_multiple_meshes.c  multiple_of_seperate_meshes.c  read_ply_file.c  read_ply_file.h  read_ply_file_index.c  read_ply_file_index.h  use_ply_data.c  use_ply_data_DrawIndexed.c
load_geometry_data/res/: B.ply  b.ply  compute.wgsl  compute_workgroup_size_64.wgsl  compute_workgroup_size_64_no_excess_vertices.wgsl  f_connected_mesh.ply  f_vertex_data_asciii.ply  f_vertex_data_flipped_centered.ply  multiple_instances_multiple_mesh_one_draw_with_compute.wgsl  multiple_instances_multiple_mesh_one_draw_with_compute_v2.wgsl  multiple_instances_using_instanceCount.wgsl  multiple_instances_using_instanceCount_and_StepModeInstance.wgsl  use_ply_data_DrawIndexed.wgsl
shadertoy/: CMakeLists.txt  shader_art_coding_introduction.c
shadertoy/res/: shader_art_coding_introduction.wgsl
